Fix calendar reminder #1279

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -315,6 +315,9 @@
                 flex-flow: column;
                 flex: 1;
                 min-width: 150px;
+                &:empty {
+                    display: none;
+                }
                 .cp-notif-entry {
                     display: flex;
                     margin-bottom: 2px;
