Make userlist and chat go on top of content #1102

--- a/www/pad/app-pad.less
+++ b/www/pad/app-pad.less
@@ -22,6 +22,16 @@ body.cp-app-pad {
         flex-flow: row;
         height: 100%;
         overflow: hidden;
+        position: relative;
+
+       .cp-toolbar-chat-drawer, .cp-toolbar-userlist-drawer{
+        @media screen and (max-width: @browser_media-medium-screen){
+            position: absolute;
+            right: 0;
+            height: 90%;
+
+        }
+       }
     }
 
     @media screen and (max-height: @browser_media-medium-screen),
@@ -152,6 +162,7 @@ body.cp-app-pad {
         .cke_toolbar {
             height: 28px;
             padding: 2px 0;
+            display: flex;
         }
         .cp-app-pad-wordCount {
             float: right;
@@ -169,6 +180,15 @@ body.cp-app-pad {
             border-color: @toolbar-bg-active;
         }
         .cke_button, .cke_combo_button {
+            .cke_combo_open{
+                display: flex;
+                flex-flow: row;
+                .cke_combo_arrow{
+                    @media (max-width: 360px){
+                        display:none;
+                    }
+                }
+            }
             .tools_unselectable();
             &.cke_button_on, &.cke_combo_button:hover, &.cke_button_off:hover {
                 background-color: @toolbar-bg-active;
