--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -869,14 +869,22 @@
                     margin-left: 10px;
                 }
             }
-            p.cp-toolbar-account {
+            li.cp-toolbar-account {
                 &> span {
                     font-weight: bold;
                     span {
                         font-weight: normal;
                     }
                 }
+                min-width: 160px;
+                padding: 5px;
+                margin: 0;
+                white-space: normal;
+                text-align: left;
+                color: #EEEEEE;
+                font-size: 14px;
             }
+
             .cp-toolbar-backup {
                 margin: 0;
                 border-radius: 0;
