--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -652,6 +652,15 @@
                 .cp-app-drive-element-state {
                     position: absolute;
                     top: 3px;
+                    left: 3px;
+                    .fa, .cptools {
+                        margin: 0;
+                        font-size: 18px;
+                    }
+                }
+                .cp-app-drive-element-menu {
+                    position: absolute;
+                    top: 3px;
                     right: 3px;
                     .fa, .cptools {
                         margin: 0;
