#1171: The `textarea` is showing and is working as intended for the purpose of creating and updating the calendar event.
BUG: carriage returns don't seem to work
WIP: the text is hardcoded as of now, have to use Messages library for
translations.

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -209,8 +209,12 @@
         .tui-full-calendar-section-date-dash {
             height: auto;
         }
-        .tui-full-calendar-section-title, .tui-full-calendar-section-location {
+        .tui-full-calendar-section-title, .tui-full-calendar-section-location, .tui-full-calendar-section-description {
             width: 100%;
+        }
+        .tui-full-calendar-section-description textarea {
+            width: 100%;
+            height: 200px;
         }
         .tui-full-calendar-dropdown-menu {
             top: 38px;
