--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -478,6 +478,7 @@
         flex-flow: column;
         flex: 1;
         min-width: 0;
+        height: 100%;
         position: relative;
         .cp-splitter {
             position: absolute;
