Delete unnecessary stuff+reduce padding for comm

--- a/www/pad/app-pad.less
+++ b/www/pad/app-pad.less
@@ -84,9 +84,6 @@ body.cp-app-pad {
         .cp-pad-show {
             line-height: 0px;
         }
-        .h2{
-            text-align: center;
-        }
     }
     #cp-app-pad-resize {
         order: 2;
@@ -157,8 +154,11 @@ body.cp-app-pad {
             text-align: left;
         }
         p.msg{
-            overflow: hidden;
             align-self: center;
+            padding: 0;
+        }
+        .dialog.nav{
+            padding: 10px;
         }
     }
 
