Fix chat and userlist height problem

--- a/www/pad/app-pad.less
+++ b/www/pad/app-pad.less
@@ -26,7 +26,8 @@ body.cp-app-pad {
         @media screen and (max-width: @browser_media-medium-screen){
             position: absolute;
             right: 0;
-            height: 90%;
+            bottom: 0;
+            top: 74px;
 
         }
        }
