further fixes to poll option types

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -642,6 +642,9 @@
                             display: flex;
                             justify-content: space-between;
                         }
+                        .cp-empty-poll-edit-buttons {
+                            padding-top: 40px
+                        }
                         input:invalid {
                             border: 2px solid @cryptpad_color_red;
                             color: @cp_form-invalid;
