adjusted poll option input width on mobile

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -778,7 +778,7 @@
                         display: flex;
                         width: 400px;
                         @media (max-width:460px) {
-                            width: 300px
+                            width: 100%
                         }
                         input {
                             flex: 1;
