#1171: Use CodeMirror in the description edition

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -197,10 +197,6 @@
                     background-color: @cp_dropdown-bg-hover;
                 }
                 .tui-full-calendar-content {
-                    &:not(textarea) {
-                        white-space: nowrap;
-                        overflow: hidden;
-                    }
                     text-overflow: ellipsis;
                     font: @colortheme_app-font;
                     padding: 0 10px;
@@ -213,10 +209,6 @@
         }
         .tui-full-calendar-section-title, .tui-full-calendar-section-location, .tui-full-calendar-section-body {
             width: 100%;
-        }
-        .tui-full-calendar-section-body textarea {
-            width: 100%;
-            height: 200px;
         }
         .tui-full-calendar-dropdown-menu {
             top: 38px;
@@ -250,6 +242,27 @@
                         margin-left: 5px;
                         border-radius: 2px;
                     }
+                }
+                .CodeMirror {
+                    margin-top: 5px;
+                    background: @cp_forms-bg;
+                    color: @cryptpad_text_col;
+                    border: 1px solid @cp_forms-border;
+                    border-radius: @variables_radius;
+                    width: 100%;
+                    height: 80px;
+                    font: @colortheme_app-font;
+                    font-size: 16px;
+                    line-height: initial;
+                    pre {
+                        margin: 0;
+                        font-family: inherit;
+                        font-size: inherit;
+                        line-height: inherit;
+                    }
+                }
+                .CodeMirror-placeholder {
+                    color: @cp_forms-placeholder;
                 }
             }
         }
