#1171: Alignment of the description content

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -254,6 +254,7 @@
                     font: @colortheme_app-font;
                     font-size: 16px;
                     line-height: initial;
+                    padding-left: 0.3rem;
                     pre {
                         margin: 0;
                         font-family: inherit;
