added margin to dropdowns that open to the left

--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -71,6 +71,7 @@
 
             &.cp-dropdown-left {
                 right: 0;
+                margin-right: 5px;
             }
 
             &:hover {
