added button to duplicate questions in forms

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -127,6 +127,14 @@
         }
     }
 
+    @media (min-width: 1350px) {
+        .cp-form-copy-button {
+            margin-right: -70%;
+        }
+
+    }
+
+
     &.cp-form-readonly {
         .cp-form-creator-inline-add {
             display: none;
@@ -137,6 +145,7 @@
         .cp-form-edit-buttons-container button {
             display: none;
         }
+        
         .cp-form-edit-save {
             display: none;
         }
