--- a/customize.dist/src/less2/include/notifications.less
+++ b/customize.dist/src/less2/include/notifications.less
@@ -65,10 +65,13 @@
         }
     }
     .cp-notifications-gotoapp {
+        padding: 0 !important;
+        justify-content: center !important;
         p {
             padding: 10px 0 !important;
             text-align: center !important;
-            font-weight: bold;
+            font-size: 14px !important;
+            font-weight: bold !important;
             cursor: pointer;
             &:hover {
                 background-color: @cp_dropdown-bg-hover;
