--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -867,7 +867,7 @@
                     margin-left: 10px;
                 }
             }
-            li.cp-toolbar-account {
+            div.cp-toolbar-account {
                 &> span {
                     font-weight: bold;
                     span {
