--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -116,11 +116,6 @@
                         margin-right: 5px !important;
                     }
 
-                    &:hover {
-                        background-color: @cp_dropdown-bg-hover;
-                        color: @cp_dropdown-fg;
-                    }
-
                     &.cp-dropdown-element-active {
                         background-color: @cp_dropdown-bg-active;
                         color: @cp_dropdown-fg;
@@ -135,59 +130,11 @@
                     }
                 }
             }
-            & > a, & > span {
-                color: @cp_dropdown-fg;
+            li[role="menuitem"] {
                 border-radius: @variables_radius;
-                padding: 5px;
-                text-decoration: none;
-                display: flex;
-                cursor: pointer;
-                -webkit-user-select: none;
-                -moz-user-select: none;
-                -ms-user-select: none;
-                user-select: none;
-                float: none;
-                text-align: left;
-                line-height: 1em;
-                align-items: center;
-
-                &:not(.fa) {
-                    font: @dropdown_font;
-                }
-                &.fa, &.cptools {
-                    font-size: 18px;
-                    &::before {
-                        width: 40px;
-                        margin-left: -10px;
-                        text-align: center;
-                    }
-                    * {
-                        font: @dropdown_font;
-                    }
-                }
-
-                .fa, .cptools {
-                    width: 20px;
-                    text-align: center;
-                    margin-right: 5px !important;
-                }
-
-                &:hover {
-                    background-color: @cp_dropdown-bg-hover;
+                &:hover, &:focus {
+                    background-color: @cp_dropdown-bg-hover !important;
                     color: @cp_dropdown-fg;
-                }
-
-                &.cp-dropdown-element-active {
-                    background-color: @cp_dropdown-bg-active;
-                    color: @cp_dropdown-fg;
-                }
-
-                &.cp-app-hidden {
-                    display: none;
-                }
-                &.cp-app-disabled {
-                    cursor: not-allowed !important;
-                    opacity: 0.5;
                 }
             }
             &> span {
@@ -224,6 +171,9 @@
                 & + hr {
                     display: none;
                 }
+            }
+            [role="separator"] + [role="separator"] {
+                display: none;
             }
 
             p {
