corrections and improvements to question duplication feature #868

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -127,12 +127,11 @@
         }
     }
 
-    @media (min-width: 1350px) {
-        .cp-form-copy-button {
-            margin-right: -70%;
-        }
-
+    .cp-form-copy-button {
+        margin-right: 5px;
     }
+
+
 
 
     &.cp-form-readonly {
