correction to drive container height css setting

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -484,7 +484,7 @@
         flex-flow: column;
         flex: 1;
         min-width: 0;
-        height: 100%;
+        min-height: 100%;
         position: relative;
         .cp-splitter {
             position: absolute;
