added margin to 'clear filter' button in mobile view #1103

--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -462,6 +462,10 @@
             button.cp-kanban-filterTags-reset {
                 cursor: pointer;
                 white-space: normal !important;
+                @media (max-width: 505px) {
+                    margin-bottom: 10px;
+                    margin-right: 10px;
+                }
                 .tools_unselectable();
                 i {
                     margin-right: 5px;
