linting + restricting question draggability on mobile #1080 + added margins on form submission page #1322

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -823,6 +823,7 @@
                 padding-bottom: 20px;
             }
             .cp-form-submit-success {
+                margin: 20px;
                 div.cp-form-submit-success-actions {
                     button:not(:last-child) {
                         margin-right: 10px;
