fixed design issue occured on notification dropdown

--- a/customize.dist/src/less2/include/notifications.less
+++ b/customize.dist/src/less2/include/notifications.less
@@ -11,8 +11,12 @@
         width: 300px;
         display: flex;
         flex-flow: column;
+        padding-left: 0;
         & hr {
-            margin: 0px !important;
+            margin: 0 !important;
+        }
+        li{
+            padding: 0 5px;
         }
         .cp-notification {
             min-height: @notif-height;
