matched dropdowns using the same amount of padding

--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -130,6 +130,9 @@
                     }
                 }
             }
+            li{
+                padding: 0 5px;
+            }
             li[role="menuitem"] {
                 border-radius: @variables_radius;
                 &:hover, &:focus {
