Fix keydown issues with dropdowns

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -750,6 +750,15 @@
                 }
             }
         }
+        .cp-toolbar-notifications {
+            .cp-notifications-container {
+                padding: 0 5px;;
+                li {
+                    margin: 0 -5px;
+                    padding: 0;
+                }
+            }
+        }
         .cp-toolbar-link {
             display: inline-flex;
             align-items: center;
