Fix style issues after the merge

--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -85,6 +85,7 @@
             }
 
             li:not([class]) {
+                padding: 0;
                 & > a, & > span {
                     color: @cp_dropdown-fg;
                     border-radius: @variables_radius;
@@ -135,9 +136,6 @@
                         opacity: 0.5;
                     }
                 }
-            }
-            li{
-                padding: 0 5px;
             }
             li[role="menuitem"] {
                 border-radius: @variables_radius;
