Uniform background color for fields in dark mode
Related to #1299 + #1171

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -250,7 +250,7 @@
                 }
                 .CodeMirror {
                     margin-top: 5px;
-                    background: @cp_forms-bg;
+                    background: @cp_forms-bg !important;
                     color: @cryptpad_text_col;
                     border: 1px solid @cp_forms-border;
                     border-radius: @variables_radius;
