Replace “Location:” with an icon and remove the “Description:” text in the popup
Related to #1299 + #1171

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -162,8 +162,11 @@
             color: @cryptpad_text_col;
             border-radius: @variables_radius_L;
             font-weight: normal;
-            .tui-full-calendar-icon:not(.tui-full-calendar-calendar-dot):not(.tui-full-calendar-dropdown-arrow):not(.tui-full-calendar-ic-checkbox) {
+            .tui-full-calendar-icon:not(.tui-full-calendar-calendar-dot):not(.tui-full-calendar-dropdown-arrow):not(.tui-full-calendar-ic-checkbox):not(.fa-map-marker) {
                 display: none;
+            }
+            .tui-full-calendar-icon {
+                text-align:center;
             }
             .tui-full-calendar-popup-detail-item {
                 a {
