Clean old // XXX comments
- either removed or changed the comment type

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -497,7 +497,7 @@
             overflow-x: auto;
         }
     }
-    // XXX this might not be the best place for this.
+    // this might not be the best place for this.
     // I just put it next to other "share" styles
     // --Aaron
     #cp-qr-container {
