--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -354,14 +354,14 @@
     table.cp-block-stats,
     table.cp-pin-list,
     table.cp-document-stats {
-        @color: #777; // XXX
+        @color: #777; // TODO use a colotheme variable
         border: 1px solid @color;
         margin: 15px;
         td, pre {
             color: @cryptpad_text_col;
         }
         td, th {
-            max-width: 60vw; // XXX
+            max-width: 60vw;
             border: 1px solid @color;
             padding: 5px;
             .scroll {
