--- a/www/teams/app-team.less
+++ b/www/teams/app-team.less
@@ -293,7 +293,7 @@
         }
     }
 
-    .cp-teams-invite-uses { // XXX
+    .cp-teams-invite-uses {
         input {
             margin-bottom: 0px !important;
             margin-right: 10px;
