--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -894,7 +894,7 @@
                 margin: 0;
                 white-space: normal;
                 text-align: left;
-                color: #EEEEEE;
+                color: @cryptpad_text_col;;
                 font-size: 14px;
             }
 
