--- a/customize.dist/src/less2/pages/page-ssoauth.less
+++ b/customize.dist/src/less2/pages/page-ssoauth.less
@@ -2,28 +2,47 @@
 @import (reference) "../include/colortheme-all.less";
 @import (reference) "../include/alertify.less";
 @import (reference) "../include/forms.less";
+@import (reference) "../include/login.less";
 
 &.cp-page-ssoauth {
     .infopages_main();
     .forms_main();
-
     .alertify_main();
+
+    .form-group {
+        .extra {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+        }
+    }
 
     div.cp-ssoauth-pw {
         display: none;
+        width: 100%;
     }
 
-    &.cp-regsiter {
-        .login {
+    .cp-container {
+        .login_main();
+    }
+
+    &.cp-register {
+        .cp-islogin {
             display: none;
+        }
+        #passwordconfirm {
+            margin-bottom: 0px !important;
         }
     }
     &.cp-login {
-        .register {
+        .cp-isregister {
             display: none;
         }
+        #password {
+            margin-bottom: 0px !important;
+        }
     }
-
 }
 
 
