--- a/customize.dist/src/less2/pages/page-register.less
+++ b/customize.dist/src/less2/pages/page-register.less
@@ -3,6 +3,7 @@
 @import (reference) "../include/alertify.less";
 @import (reference) "../include/checkmark.less";
 @import (reference) "../include/forms.less";
+@import (reference) "../include/login.less";
 
 &.cp-page-register {
     .infopages_main();
@@ -88,37 +89,21 @@
         .cp-hidden {
             display: none !important;
         }
+        .login_main();
         #userForm, #ssoForm {
-            padding: 15px;
-            background-color: @cp_static-card-bg;
             position: relative;
             z-index: 2;
-            //margin-bottom: 100px;
-            border-radius: @infopages-radius-L;
             max-width: 100%;
-            .cp-shadow();
-            .form-control {
-                border-radius: @infopages-radius;
-                color: @cryptpad_text_col;
-                background-color: @cp_forms-bg;
-                margin-bottom: 10px;
-                &:focus {
-                    border-color: @cryptpad_color_brand;
-                }
-                .tools_placeholder-color();
-            }
+            padding: 15px;
             .checkbox-container {
                 margin-top: 0.5rem;
-                color: @cryptpad_text_col;
             }
             button#register {
                 margin-top: 10px;
             }
         }
         #ssoForm {
-            button {
-                margin: 0 5px;
-            }
+            margin-top: 15px;
         }
 
         .cp-register-notes {
