--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -534,7 +534,7 @@
             color: @cp_toolbar-fg;
             border-color: @cp_toolbar-fg;
             &:hover {
-                background-color: fade(@cp_toolbar-fg, 50%); //XXX check light theme
+                background-color: fade(@cp_toolbar-fg, 50%);
                 cursor: pointer;
             }
         }
