Remove outline on drive content container when focused

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -507,6 +507,9 @@
         }
     }
     #cp-app-drive-content {
+        &:focus {
+            outline: none;
+        }
         box-sizing: border-box;
         background: @cp_sidebar-right-bg;
         color: @cp_sidebar-right-fg;
