Fix focus styles in toolbar

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -367,9 +367,8 @@
         * {
             outline-width: 0;
             &:focus {
-                outline-width: 1rem;
                 // color shows on chrome/edge, but not firefox
-                outline-color: grey; // XXX temporary color to change
+                outline-color: @cryptpad_color_brand;
             }
         }
 
