Fix margin errors in dropdown with some browsers/OS

--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -62,6 +62,7 @@
         }
 
         .cp-dropdown-content {
+            list-style-type: none;
             display: none;
             position: absolute;
             background-color: @cp_dropdown-bg;
