add outline to focused elements

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -360,11 +360,9 @@
 
     .cp-toolbar {
         * {
-            outline-width: 0;
+            outline-style: none;
             &:focus {
-                outline-width: 1rem;
-                // color shows on chrome/edge, but not firefox
-                outline-color: grey; // XXX temporary color to change
+                outline: blue solid 2px;
             }
         }
 
@@ -767,6 +765,7 @@
                 padding: 10px;
                 color: @toolbar-bg-color;
                 color: var(--toolbar-bg-color);
+                border-radius: 5px;
 
                 span {
                     font-size: 45px;
