change outline color

--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -367,7 +367,7 @@
         * {
             outline-style: none;
             &:focus {
-                outline: blue solid 2px;
+                outline: @cryptpad_color_brand solid 2px;
             }
         }
 
