Restrict SSO registration

--- a/customize.dist/src/less2/pages/page-register.less
+++ b/customize.dist/src/less2/pages/page-register.less
@@ -22,6 +22,9 @@
         .cp-restricted-registration {
             display: none;
         }
+        .cp-closed-filler {
+            display: none;
+        }
     }
     &.cp-register-closed {
         div.cp-register-det {
