Store user data for new SSO accounts (configurable)

--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -246,6 +246,12 @@
         }
     }
 
+    .cp-admin-users {
+        .cp-admin-store-invited, .cp-admin-store-sso {
+            margin-bottom: 0 !important;
+        }
+    }
+
     .cp-admin-broadcast-form {
         input.flatpickr-input {
             width: 307.875px !important; // same width as flatpickr calendar
