title icons for files with thumbnails

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -62,6 +62,20 @@
                 white-space: nowrap;
                 text-overflow: ellipsis;
                 word-wrap: break-word;
+                text-align: center !important;
+
+            }
+            .cp-app-drive-element-name-icon {
+                text-align: center !important;
+                float: center !important;
+                max-width: fit-content !important
+            
+            }
+            .cp-app-drive-element-icon {
+                font-size: 12px !important;
+                float: left !important;
+                margin: 5px !important;
+            
             }
             .cp-app-drive-element-truncated {
                 display: block;
@@ -730,19 +744,19 @@
                     display: inline-block;
                     white-space: nowrap;
                     &:first-child, &.cp-icon {
-                        min-width: 20px;
-                        text-align: center;
-                        font-size: 18px;
-                        line-height: 32px;
-                        padding: 0;
+                        // min-width: 20px;
+                        // text-align: center;
+                        // font-size: 18px;
+                        // line-height: 32px;
+                        // padding: 0;
                     }
-                    &.cp-app-drive-element-name {
-                        flex: 1;
-                        min-width: 0;
-                        text-align: left;
-                        text-overflow: ellipsis;
-                        overflow: hidden;
-                    }
+                    // &.cp-app-drive-element-name {
+                    //     flex: 1;
+                    //     min-width: 0;
+                    //     text-align: left;
+                    //     text-overflow: ellipsis;
+                    //     overflow: hidden;
+                    // }
                     &.cp-app-drive-element-state {
                         min-width: 40px;
                         text-align: right;
