stopped file icon displaying in grid view

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -678,7 +678,7 @@
                     max-height: 100px;
                     background: @cp_drive-thumb-bg;
                     & ~ .fa, & ~ .cptools {
-                        display: inline;
+                        display: none;
                         font-size: 17px;
                         position: absolute;
                         top: 3px;
@@ -730,6 +730,7 @@
                     display: inline-block;
                     white-space: nowrap;
                     &:first-child, &.cp-icon {
+                        display: block-inline;
                         min-width: 20px;
                         text-align: center;
                         font-size: 18px;
