icons appended to thumbnail files only in grid view #1351

--- a/customize.dist/src/less2/include/drive.less
+++ b/customize.dist/src/less2/include/drive.less
@@ -634,6 +634,7 @@
             }
         }
         div.cp-app-drive-content-grid {
+
             padding: 1em;
             ul {
                 margin: -(@drive_icon-margin);
@@ -667,6 +668,19 @@
                         font-size: 18px;
                     }
                 }
+                .cp-app-drive-element-icon {
+                    font-size: 12px !important;
+                    float: left !important;
+                    margin: 5px !important;
+                
+                }
+                .cp-app-drive-element-name-icon {
+                    text-align: center !important;
+                    float: center !important;
+                    max-width: fit-content !important;
+                
+                }
+
                 .cp-app-drive-element-state {
                     left: 3px;
                 }
@@ -701,6 +715,10 @@
         }
 
         div.cp-app-drive-content-list {
+
+            .cp-app-drive-element-icon {
+                display: none !important;
+            }
             .cp-app-drive-element-grid {
                 display: none;
             }
@@ -1029,6 +1047,7 @@
         order: 15;
         margin: 0 1em;
     }
+
 
 }
 
