--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -37,12 +37,12 @@
         }
     }
 
-    .cp-admin-setlimit-form, .cp-admin-broadcast-form {
-        label {
+    .cp-sidebarlayout-element {
+        label:not(> label) {
             font-weight: normal !important;
         }
         input {
-            max-width: 400px;
+            max-width: 25rem;
         }
         nav {
             display: flex;
