Add UI to the user directory admin page

--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -38,7 +38,7 @@
     }
 
     .cp-sidebarlayout-element {
-        label:not(> label) {
+        label:not(.cp-admin-label) {
             font-weight: normal !important;
         }
         input {
