separate hover and focus styling on menu items

--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -139,8 +139,10 @@
             }
             li[role="menuitem"] {
                 border-radius: @variables_radius;
-                &:hover, &:focus {
+                &:hover{
                     background-color: @cp_dropdown-bg-hover !important;
+                }
+                &:focus {
                     color: @cp_dropdown-fg;
                 }
             }
