--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -117,6 +117,11 @@
                         display: flex;
                         margin-top: 0.5rem;
                     }
+                    .cp-sidebar-bigger-alert {
+                            font-size: 16px;
+                        }
+            
+                
                 }
 
                 .cp-sidebarlayout-description {
