--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -120,7 +120,10 @@
                     .cp-sidebar-bigger-alert {
                             font-size: 16px;
                         }
-            
+                    label {
+                        margin-bottom: 0;
+                        margin-top: 0.5rem;
+                    }
                 
                 }
 
