New support: answer anonymously for admins

--- a/customize.dist/src/less2/include/notifications.less
+++ b/customize.dist/src/less2/include/notifications.less
@@ -44,6 +44,14 @@
                 .avatar_main(30px);
                 padding: 0 5px;
             }
+            .cp-avatar-image {
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                img {
+                    height: 40px;
+                }
+            }
             .cp-notification-content {
                 flex: 1;
                 align-items: stretch;
