--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -366,7 +366,7 @@
     .cp-toolbar {
         * {
             outline-style: none;
-            &:focus {
+            &:focus-visible {
                 outline: @cryptpad_color_brand solid 2px;
             }
         }
