Small focus fixes
- Use :focus-visible selector
- Apply FG color inside dropdown

--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -142,8 +142,8 @@
                 &:hover{
                     background-color: @cp_dropdown-bg-hover !important;
                 }
-                &:focus {
-                    color: @cp_dropdown-fg;
+                &:focus-visible {
+                    outline-color: @cp_dropdown-fg;
                 }
             }
             &> span {
