fix `File` dropdown style WIP #1284

--- a/customize.dist/src/less2/include/dropdown.less
+++ b/customize.dist/src/less2/include/dropdown.less
@@ -139,6 +139,7 @@
             }
             li[role="menuitem"] {
                 border-radius: @variables_radius;
+                white-space: nowrap;
                 &:hover, &:focus {
                     background-color: @cp_dropdown-bg-hover !important;
                     color: @cp_dropdown-fg;
